@@ -2,6 +2,7 @@ Revision history for Mojolicious-Plugin-Tusu
 
 0.29 2011/12/19
   - Added get_component method.
+  - Added render method on ComponentBase
   - Bundled Text::PSTemplate v0.41
 
 0.28 2011/11/29
